--- a/AgileWorksSolution/AgileWorks/Views/Appeals/Delete.cshtml
+++ b/AgileWorksSolution/AgileWorks/Views/Appeals/Delete.cshtml
@@ -11,27 +11,27 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.description)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Description)
+            @Html.DisplayFor(model => model.description)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Entry_DateTime)
+            @Html.DisplayNameFor(model => model.entryDatetime)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Entry_DateTime)
+            @Html.DisplayFor(model => model.entryDatetime)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.DeadLine_DateTime)
+            @Html.DisplayNameFor(model => model.deadlineDatetime)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.DeadLine_DateTime)
+            @Html.DisplayFor(model => model.deadlineDatetime)
         </dd>
 
     </dl>
